infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          args:
            - "-c"
            - "/etc/nats/nats.conf"
          ports:
            - name: client
              containerPort: 4222
            - name: monitoring
              containerPort: 8222
          volumeMounts:
            - name: nats-config
              mountPath: /etc/nats
            - name: nats-storage
              mountPath: /data/nats
      volumes:
        - name: nats-config
          configMap:
            name: nats-config
        - name: nats-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
