infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          args: ["--replSet", "rs0", "--bind_ip_all"]
          startupProbe:
            tcpSocket:
              port: 27017
            periodSeconds: 5
            failureThreshold: 60
            timeoutSeconds: 5

          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 5

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  mongosh --quiet --eval "try { const h = db.adminCommand({ hello: 1 }); quit(h.isWritablePrimary ? 0 : 1); } catch (e) { quit(1); }"
            periodSeconds: 5
            failureThreshold: 60
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  publishNotReadyAddresses: true
  selector:
    app: orders-mongo
  ports:
    - protocol: TCP
      name: orders-db
      port: 27017
      targetPort: 27017
